# gither

./: .gitignore  README.md  pyproject.toml
.gither/changes/: 20260621T182546Z-rename-forge-to-gither-code-forge.json  20260621T200137Z-add-gither-knowledge-ownership-model.json  20260621T201853Z-position-gither-as-p2p-github-duplicate.json  20260622T003506Z-add-license-aware-mirror-protocol.json  (+6 more)
.github/workflows/: ci.yml
docs/: AGENT_IDENTITY_SERVICES_PAPER.md  AGENT_PROFILE.md  ARCHITECTURE.md  BENCHMARK_PLAN.md  CODE_FORGE.md  CODE_GRAPH.md  GIT_POSITION.md  HASHGRAPH_NAVIGATION.md  KNOWLEDGE_OWNERSHIP.md  LICENSE_PROTOCOL.md  MULTI_REPO_WORKFLOW.md  P2P_GITHUB_DUPLICATE.md  P2P_PROTOCOL.md  RADICLE_GAP_BACKLOG.md  ROADMAP.md  agent-identity-services-paper.html  agent-profile.html  agentic-workflows.html  architecture.html  benchmark-plan.html  code-forge.html  enrichment-score.html  getting-started.html  git-position.html  gither-guide.css  index.html  knowledge-ownership.html  license-protocol.html  operator-playbook.html  p2p-github-duplicate.html  radicle-gap-backlog.html  repository-gitbooks.html  roadmap.html  wiki.html
examples/: knitweb.workspace.json
tests/: test_analyze.py  test_audit.py  test_codegraph.py  test_codegraph_store.py  test_docs_site.py  test_enrichment.py  test_gitops_changebook.py  test_gitops_rename.py  test_gossip.py  test_graph.py  test_identity.py  test_licenses.py  test_p2p_manifest.py  test_peer.py  test_popularity.py  test_review_pack.py  test_routing.py  test_sigrefs.py  test_transport.py  test_value.py  test_workspace.py
(+44 files in other folders)
