[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knitweb-gither"
version = "0.1.0"
description = "A serverless-oriented code forge and review gate for Knitweb repositories."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Knitweb" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[project.scripts]
gither = "gither.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
